<resources>
    <string name="app_name">NewDemo</string>
    <string name="login">登录</string>
    <string name="person">扫描点检员标签</string>
    <string name="name">点检员姓名</string>
    <string name="checkwork">工序选择</string>
    <string name="date">排产日期</string>
    <string name="net">更改网址</string>
    <string name="text">点检员登录</string>
    <string-array name="work_labels">
        <item>工序一</item>
        <item>工序二</item>
        <item>工序三</item>
        <item>工序四</item>
        <item>工序五</item>
        <item>工序六</item>
        <item>工序七</item>
        <item>工序八</item>
        <item>工序九</item>
        <item>工序十</item>
        <item>工序十一</item>
        <item>工序十二</item>
    </string-array>
    <string name="version">当前系统版本：beta1.0</string>
</resources>
