<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="#CC99FF">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv"
            android:text="@string/text"
            android:textSize="20sp"
            android:textColor="#FFFFFF"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/iv"
            android:layout_marginLeft="150dp"
            android:background="@drawable/widget_line"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/net"
            android:text="@string/net"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"
            android:textColor="#FFFFFF"
            android:background="#CC99FF"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:text="@string/date"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:gravity="center"/>
            <Button
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:id="@+id/date"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:background="#FFFFCC"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:text="@string/checkwork"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:gravity="center"/>
            <Spinner
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:gravity="center"
                android:id="@+id/mywork"
                android:layout_marginLeft="20dp"
                android:entries="@array/work_labels">
            </Spinner>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:id="@+id/person"
                android:text="@string/person"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:background="#FFFFFF"/>
            <TextView
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:id="@+id/name"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:hint="@string/name"
                android:textSize="20sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">
            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/login"
                android:text="@string/login"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:background="#FFFFCC" />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="0"
        android:background="@drawable/drawer_header"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version" />
    </LinearLayout>

</LinearLayout>